--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ h4{
 }
 h5{
     font-size: 16px;
-    font-weight: 500;
+    
 }
 h6{
     font-size: 14px;
@@ -141,15 +141,15 @@ ul {
 }
 .card1 .firstText{
   color: white;
-  font-weight: 500;
+  font-weight: 700;
 }
 .card1 .secondText{
   color: white;
-  font-weight: 500;
+  font-weight: 700;
 }
 .card1 .thirdText{
-  color: white;
-  font-weight: 500;
+  color: rgb(77, 220, 77);
+  font-weight: 700;
 }
 .hero-button{
   display: flex;
@@ -162,4 +162,111 @@ ul {
   padding-bottom: 1px;
   color: rgb(235, 119, 119);
   justify-content: center;
+}
+.iconStyle {
+  color: rgb(77, 220, 77);
+}
+.services{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8rem;
+  padding: 1rem 2rem;
+
+}
+.left-service{
+  width: 30vw;
+}
+.service-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: rgb(235, 119, 119);
+  width: 12rem;
+  height: 3rem;
+  border-radius: 12px;
+  margin-top: 4rem;
+}
+.service-button h6{
+  color: white;
+}
+
+.arrow-icon{
+  background-color: white;
+  height: 1rem;
+  width: 1rem;
+  padding: 8px;
+  color: rgb(235, 119, 119);
+  border-radius: 100%;
+  align-items: center;
+  justify-content: center;
+  rotate: -45deg;
+}
+
+.right-service{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  width: 50vw;
+  justify-content: right;
+}
+
+.service-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(245, 245, 245);
+  gap: 1rem;
+  border-radius: 12px;
+  width: 16rem;
+}
+
+.loan-card ,.wealth-card ,.checking-card, .international-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  font-weight: medium;
+  gap: 1.5rem;
+ 
+}
+
+.loan-style, .wealth-style, .checking-style, .international-style{
+  background-color: rgb(235, 119, 119);
+  height: 2rem;
+  width: 2rem;
+  padding: 8px;
+  color: white;
+  border-radius: 100%;
+  align-items: center;
+  justify-content: center;              
+  -webkit-text-stroke: 2px black;
+}
+.about{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 2rem;
+  margin-top: 4rem;
+}
+.about .about-body{
+  display: flex;
+  justify-content: space-between;
+}
+.about .about-body .about-body-left{
+  width: 40vw;
+}
+.about .about-body .about-body-left img{
+  width: 100%;
+}
+.about .about-body .about-body-right{
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.about .values{
+  display: flex;
+  flex-direction: column;
+ 
 }
